--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
 #  The following will be requested for reviews when approval is needed.
-*  @Suprenix @Samueliyiola @OluwanifemiOD
+*  @Suprenix @Samueliyiola @OluwanifemiOD @afroBalogun
