--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,12 +11,13 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http": "^0.0.1-security",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.10.0",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5"
   },
