--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,7 +18,9 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "path": "^0.12.7",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
