--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.0",
+    "@tailwindcss/vite": "^4.0.12",
+    "@tanstack/react-query": "^5.67.2",
+    "axios": "^1.8.2",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5"
   },
@@ -22,12 +27,15 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "sass": "^1.85.0",
+    "postcss": "^8.5.3",
+    "sass": "^1.85.1",
+    "tailwindcss": "^4.0.12",
     "vite": "^6.1.0"
   }
 }
